removed mpio_tool.c

--- a/kernel/Makefile.in
+++ b/kernel/Makefile.in
@@ -80,7 +80,8 @@ STRIP = @STRIP@
 VERSION = @VERSION@
 
 INCLUDES = -I/usr/src/linux/include
-KCFLAGS = -D__KERNEL__ -I$(INCLUDE) -Wall -Wstrict-prototypes -O2 	-fomit-frame-pointer -pipe -DMODULE
+KCFLAGS = -D__KERNEL__ -I$(INCLUDE) -Wall -Wstrict-prototypes -O2 \
+	-fomit-frame-pointer -pipe -DMODULE
 
 
 bin_PROGRAMS = mpio.o
