mpiosh: some internal changes and support for command sequences

--- a/Makefile.in
+++ b/Makefile.in
@@ -79,7 +79,7 @@ RANLIB = @RANLIB@
 STRIP = @STRIP@
 VERSION = @VERSION@
 
-SUBDIRS = kernel libmpio mpio_tool
+SUBDIRS = kernel libmpio mpiosh
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_CLEAN_FILES = 
