--- a/libmpio/Makefile.in
+++ b/libmpio/Makefile.in
@@ -83,28 +83,13 @@ INCLUDES =
 
 lib_LTLIBRARIES = libmpio.la
 
-libmpio_la_SOURCES = \
-		mpio.c \
-		io.c \
-		debug.c \
-		smartmedia.c \
-		directory.c \
-		fat.c \
-		ecc.c
+libmpio_la_SOURCES =  		mpio.c 		io.c 		debug.c 		smartmedia.c 		directory.c 		fat.c 		ecc.c
 
 
-pkginclude_HEADERS = \
-		mpio.h \
-		defs.h
+pkginclude_HEADERS =  		mpio.h 		defs.h
 
 
-noinst_HEADERS = \
-		io.h \
-		debug.h \
-		smartmedia.h \
-		directory.h \
-		fat.h \
-		ecc.h
+noinst_HEADERS =  		io.h 		debug.h 		smartmedia.h 		directory.h 		fat.h 		ecc.h
 
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_CLEAN_FILES = 
