--- a/kernel/Makefile.am
+++ b/kernel/Makefile.am
@@ -2,12 +2,13 @@ INCLUDES=-I/usr/src/linux/include
 KCFLAGS=-D__KERNEL__ -I$(INCLUDE) -Wall -Wstrict-prototypes -O2 \
 	-fomit-frame-pointer -pipe -DMODULE
 
-bin_PROGRAMS=mpio.o
-
-mpio_o_SOURCES=mpio.c
+EXTRA_DIST=mpio.c
 
 all: mpio.o
 
 mpio.o: mpio.c
 	$(CC) -c $(KCFLAGS) $(INCLUDES) $<
 
+install:
+	$(mkinstalldirs) $(DESTDIR)@MODULE_PATH@
+	$(INSTALL_PROGRAM) -m 644 mpio.o $(DESTDIR)@MODULE_PATH@
