new method for installing the kernel module

--- a/kernel/Makefile.am
+++ b/kernel/Makefile.am
@@ -9,10 +9,14 @@ all: mpio.o
 mpio.o: mpio.c
 	$(CC) -c $(KCFLAGS) $(INCLUDES) $<
 
-install-strip:
+install-data-local:
 	$(mkinstalldirs) $(DESTDIR)@MODULE_PATH@
 	$(INSTALL_PROGRAM) -m 644 mpio.o $(DESTDIR)@MODULE_PATH@
 
-install:
-	$(mkinstalldirs) $(DESTDIR)@MODULE_PATH@
-	$(INSTALL_PROGRAM) -m 644 mpio.o $(DESTDIR)@MODULE_PATH@
+# install-strip:
+# 	$(mkinstalldirs) $(DESTDIR)@MODULE_PATH@
+# 	$(INSTALL_PROGRAM) -m 644 mpio.o $(DESTDIR)@MODULE_PATH@
+
+# install:
+# 	$(mkinstalldirs) $(DESTDIR)@MODULE_PATH@
+# 	$(INSTALL_PROGRAM) -m 644 mpio.o $(DESTDIR)@MODULE_PATH@
