changed install-strip -> install

--- a/mpio.spec.in
+++ b/mpio.spec.in
@@ -27,7 +27,7 @@ make
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make DESTDIR=$RPM_BUILD_ROOT install-strip
+make DESTDIR=$RPM_BUILD_ROOT install
 
 %post
 mkmpiodev
