major changes to write support, BEWARE, some things might be broken in the progress (internal mem too!) added files cis.{c,h}

--- a/libmpio/Makefile.am
+++ b/libmpio/Makefile.am
@@ -9,7 +9,8 @@ libmpio_la_SOURCES= \
 		smartmedia.c \
 		directory.c \
 		fat.c \
-		ecc.c
+		ecc.c \
+		cis.c
 
 pkginclude_HEADERS= \
 		mpio.h \
@@ -21,4 +22,5 @@ noinst_HEADERS= \
 		smartmedia.h \
 		directory.h \
 		fat.h \
-		ecc.h
+		ecc.h \
+		cis.h
