add alias support for commands and extended argument completion

--- a/mpiosh/Makefile.am
+++ b/mpiosh/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES=-I..
 
 bin_PROGRAMS=mpiosh
 
-mpiosh_SOURCES=mpiosh.c callback.c readline.c command.c
+mpiosh_SOURCES=mpiosh.c callback.c readline.c command.c global.c
 mpiosh_LDADD=../libmpio/libmpio.la -lreadline -lncurses
 
-noinst_HEADERS=mpiosh.h callback.h readline.h command.h
+noinst_HEADERS=mpiosh.h callback.h readline.h command.h global.h
