add logotool to tweak animation in config.dat.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS=kernel libmpio mpiosh etc
+SUBDIRS=kernel libmpio mpiosh etc tools
 
 sbin_SCRIPTS=mkmpiodev
 EXTRA_DIST=mpio.spec mkmpiodev
