--- a/libmpio/Makefile.am
+++ b/libmpio/Makefile.am
@@ -1,5 +1,5 @@
 INCLUDES=@MPLIB_INCLUDE@
-CFLAGS=@CFLAGS@ @MPLIB_CFLAGS@ 
+AM_CFLAGS=@MPLIB_CFLAGS@ 
 
 lib_LTLIBRARIES=libmpio.la 
 libmpio_la_LIBADD=@MPLIB_LIBADD@
