--- a/configure.in
+++ b/configure.in
@@ -47,16 +47,9 @@ TEST_MPLIB
 
 if test "$ac_cv_use_mplib" = yes; then
   AC_CONFIG_SUBDIRS(mplib)
-  MPLIB_INCLUDE=-I../mplib/src
+  MPLIB_INCLUDE=-Implib
   MPLIB_CFLAGS=-DMPLIB
-  MPLIB_LIBADD=../mplib/src/libmp.la 
-  MPLIB_SUBDIR=mplib
 fi
-
-AC_SUBST(MPLIB_INCLUDE)
-AC_SUBST(MPLIB_CFLAGS)
-AC_SUBST(MPLIB_LIBADD)
-AC_SUBST(MPLIB_SUBDIR)
 
 dnl --- check for kernel version
 kernel_version=`uname -r 2>&1`
@@ -117,5 +110,3 @@ AC_OUTPUT(
     tools/Makefile
     mpio.spec
 )
-
-
