--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS=@MPLIB_SUBDIR@ kernel libmpio mpiosh etc tools 
+SUBDIRS=kernel libmpio mpiosh etc tools 
 
 sbin_SCRIPTS=mkmpiodev
 EXTRA_DIST=mpio.spec mkmpiodev
