--- a/libmpio/Makefile.am
+++ b/libmpio/Makefile.am
@@ -1,6 +1,6 @@
-INCLUDES=@MPLIB_INCLUDE@
-AM_CFLAGS=@MPLIB_CFLAGS@ 
-AM_LDFLAGS=-version-info 1:0:0
+INCLUDES=@MPLIB_INCLUDE@ 
+AM_CFLAGS=@MPLIB_CFLAGS@ @USB_CFLAGS@
+AM_LDFLAGS=-version-info 1:0:0 @USB_LIBS@
 
 lib_LTLIBRARIES=libmpio.la 
 
