--- a/configure.in
+++ b/configure.in
@@ -4,13 +4,18 @@ dnl Process this file with autoconf to produce a configure script.
 dnl we need autoconf >= 2.50
 AC_PREREQ(2.50)
 
-AC_INIT(kernel/mpio.c)
+AC_INIT(libmpio/src/mpio.c)
 dnl AM_CONFIG_HEADER(src/config.h)
 
 AC_CANONICAL_SYSTEM()
 AC_MSG_RESULT(Building for a ${host} host.)
 
-AM_INIT_AUTOMAKE(mpio, 0.7.1-2003101901)
+AM_INIT_AUTOMAKE(mpio, 0.7.1-1.2004032415)
+
+dnl build release variable
+RELEASE=`echo $VERSION | cut -d- -f2`
+VERSION=`echo $VERSION | cut -d- -f1`
+AC_SUBST(RELEASE)
 
 dnl Checks for programs.
 
@@ -73,12 +78,13 @@ if test -n "${LIBUSB_CONFIG}"; then
 	    LDFLAGS="$LDFLAGS_orig"])
     CPPFLAGS="$CPPFLAGS_save"
 fi
+set > /tmp/set.foo
 
         # This 'test' call uses non-standard syntax and will fail on most
         # systems, but it's just informational so any warning can be ignored.
-if test "$LIBUSB_VER" \< "0.1.6"; then
+if test "$LIBUSB_VER" \< "0.1.7"; then
     AC_MSG_WARN([
-*** You need at least version 0.1.6 of the libusb library for USB support
+*** You need at least version 0.1.7 of the libusb library for USB support
 *** http://sourceforge.net/projects/libusb/
 *** If you cannot find the appropriate version, try CVS
 	    ])
@@ -161,11 +167,8 @@ AC_SUBST(MPIO_KERNEL)
 
 dnl ------------------------------------------------------------
 
-# could not find a way to compile the kernel module correctly
-#    kernel/Makefile
 AC_OUTPUT(
     Makefile
-    kernel/Makefile
     libmpio/Makefile
     mpiosh/Makefile
     etc/Makefile
