--- a/mpio.spec.in
+++ b/mpio.spec.in
@@ -45,6 +45,9 @@ echo "%defattr(644,root,root)" >> /tmp/mpio-files.lst
 echo "%sysconfdir/mpio/mpioshrc" >> /tmp/mpio-files.lst
 echo "%prefix/include/mpio/mpio.h" >> /tmp/mpio-files.lst
 echo "%prefix/include/mpio/defs.h" >> /tmp/mpio-files.lst
+echo "/etc/hotplug/usb/libmpio.usermap" >> /tmp/mpio-files.lst
+echo "%defattr(755,root,root)" >> /tmp/mpio-files.lst
+echo "/etc/hotplug/usb/libmpio" >> /tmp/mpio-files.lst
 
 make DESTDIR=$RPM_BUILD_ROOT install
 
