--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.4)
 
-set (PACKAGE mpiotools)
+set (PACKAGE mpiosh)
 project (${PACKAGE} C)
 
 add_subdirectory (libmpio)
-add_subdirectory (mpiosh)
+add_subdirectory (src)
