--- a/libmpio/src/CMakeLists.txt
+++ b/libmpio/src/CMakeLists.txt
@@ -5,5 +5,5 @@ include_directories (${CMAKE_CURRENT_SOURCE_DIR}/../)
 add_library (mpio STATIC mpio.c io.c debug.c smartmedia.c mmc.c directory.c
 	fat.c ecc.c cis.c)
 
-target_link_libraries (mpio -lusb)
+target_link_libraries (mpio ${LIBUSB})
 
